<resources>
    <string name="app_name">Dice Roller</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>

    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>

    <string name="subtract">-</string>
    <string name="addition">+</string>

    <string name="rollDice">roll</string>
</resources>
